[package]
name = "evscript"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
clap = { version = "4.4.2", features = ["derive"] }
codespan-reporting = "0.11.1"
string-interner = "0.14.0"
yoke = { version = "0.7.3", features = ["derive"] }

[build-dependencies]
lalrpop = "0.20.0"
